# Nrf5340DisconnectIssue

Bluetooth_peripheral/: CMakeLists.txt  prj.conf
Bluetooth_peripheral/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay
Bluetooth_peripheral/build_1/: .ninja_log  .vscode-nrf-connect.json  Bluetooth_peripheral_sysbuild_cache.txt  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  domains.yaml  ipc_radio_sysbuild_cache.txt.tmp  merged.hex  merged_CPUNET.hex
Bluetooth_peripheral/build_1/Bluetooth_peripheral/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json
Bluetooth_peripheral/build_1/Kconfig/: Kconfig.shield
Bluetooth_peripheral/build_1/_sysbuild/: autoconf.h  cmake_install.cmake
Bluetooth_peripheral/build_1/ipc_radio/: .ninja_deps  .ninja_log  CMakeCache.txt.tmp  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json
Bluetooth_peripheral/build_2/: .ninja_log  .vscode-nrf-connect.json  Bluetooth_peripheral_sysbuild_cache.txt.tmp  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  ipc_radio_sysbuild_cache.txt  merged_CPUNET.hex
Bluetooth_peripheral/build_2/Bluetooth_peripheral/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
Bluetooth_peripheral/build_2/zephyr/: .config
Bluetooth_peripheral/child_image/: hci_ipc.conf
Bluetooth_peripheral/src/: bluetooth.c  bluetooth.h  main.c
(+843 files in other folders)
